# opportunities-engine

./: .env.example  .gitignore  =2.4  README.md  opportunities-engine-architecture.html  pyproject.toml
.claude/commands/: phase-d.md
.hermes/briefs/: phase-d-dedup.md
.hermes/plans/: 2026-04-19_174400-database-buildout-master.md  2026-04-19_174400-database-buildout-phase-a.md
data/: README_SNAPSHOTS.md  dream_companies.json  latest_digest.md  linear_ids.json  ranked_jobs.json  seed_companies.json  seed_companies_snapshot_2026-04-19.json
docs/: PLAN.md  runbook.md
migrations/: 001_initial_schema.sql  002_data_migration.sql  003_canonical_key.sql  004_drop_fk_constraints.sql  005_linear_poll_state.sql  006_scores_table.sql
scripts/: backfill_canonical.py  daily_digest.py  daily_ingest.py  linkedin_lite.py  migrate_json_to_db.py  push_top_to_linear.py  rank.py  refresh_yc_seed.py  summary_digest.py
src/opportunities_engine/: __init__.py  cli.py  config.py  events.py
tests/: test_ats_ingest.py  test_cli.py  test_config.py  test_daily_ingest.py  test_discord_digest.py  test_hn_hiring.py  test_migrations.py  test_phase_b.py  test_phase_c.py  test_push_top_to_linear.py  test_rank.py  test_storage.py  test_substack.py  test_wellfound.py  test_why_interesting.py  test_yc_seed.py
tests/dedup/: test_canonical.py  test_fuzzy.py  test_upsert.py
tests/events/: test_emitter.py  test_linear_comments.py  test_linear_listener.py  test_queries.py
tests/fixtures/: wellfound_sample.html
tests/semantic/: test_quality_filters.py  test_remote_filter.py
(+28 files in other folders)
