[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opportunities-engine"
version = "0.1.0"
description = "Personal GTM Engineer job hunt automation system"
authors = [{ name = "Keegan Moody", email = "keeganmoody33@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "python-jobspy>=1.1.70",
    "duckdb>=1.0.0",
    "apprise>=1.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
ranker = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
oe = "opportunities_engine.cli:main"
engine = "opportunities_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opportunities_engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
